logs/pyspread.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyspread'...
Listing './lib/python3.5/site-packages/pyspread/doc'...
Listing './lib/python3.5/site-packages/pyspread/doc/help'...
Listing './lib/python3.5/site-packages/pyspread/doc/help/images'...
Listing './lib/python3.5/site-packages/pyspread/examples'...
Listing './lib/python3.5/site-packages/pyspread/locale'...
Listing './lib/python3.5/site-packages/pyspread/locale/da'...
Listing './lib/python3.5/site-packages/pyspread/locale/da/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pyspread/locale/de'...
Listing './lib/python3.5/site-packages/pyspread/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pyspread/locale/en'...
Listing './lib/python3.5/site-packages/pyspread/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pyspread/locale/fr'...
Listing './lib/python3.5/site-packages/pyspread/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pyspread/locale/nb'...
Listing './lib/python3.5/site-packages/pyspread/locale/nb/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pyspread/locale/nl'...
Listing './lib/python3.5/site-packages/pyspread/locale/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pyspread/locale/nn'...
Listing './lib/python3.5/site-packages/pyspread/locale/nn/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pyspread/locale/pt_BR'...
Listing './lib/python3.5/site-packages/pyspread/locale/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pyspread/locale/uk'...
Listing './lib/python3.5/site-packages/pyspread/locale/uk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/pyspread/po'...
Listing './lib/python3.5/site-packages/pyspread/share'...
Listing './lib/python3.5/site-packages/pyspread/share/icons'...
Listing './lib/python3.5/site-packages/pyspread/share/icons/Tango'...
Listing './lib/python3.5/site-packages/pyspread/share/icons/Tango/24x24'...
Listing './lib/python3.5/site-packages/pyspread/share/icons/Tango/24x24/actions'...
Listing './lib/python3.5/site-packages/pyspread/share/icons/Tango/24x24/status'...
Listing './lib/python3.5/site-packages/pyspread/share/icons/Tango/24x24/toggles'...
Listing './lib/python3.5/site-packages/pyspread/src'...
Listing './lib/python3.5/site-packages/pyspread/src/actions'...
Compiling './lib/python3.5/site-packages/pyspread/src/actions/_grid_actions.py'...
***   File "./lib/python3.5/site-packages/pyspread/src/actions/_grid_actions.py", line 383
    except interface_errors, err:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyspread/src/actions/_main_window_actions.py'...
***   File "./lib/python3.5/site-packages/pyspread/src/actions/_main_window_actions.py", line 180
    except IOError, err:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyspread/src/actions/test'...
Compiling './lib/python3.5/site-packages/pyspread/src/actions/test/test_grid_actions.py'...
***   File "./lib/python3.5/site-packages/pyspread/src/actions/test/test_grid_actions.py", line 176
    os.chmod(self.filename_not_permitted, 0200)
                                             ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/pyspread/src/actions/test/test_main_window_actions.py'...
***   File "./lib/python3.5/site-packages/pyspread/src/actions/test/test_main_window_actions.py", line 165
    print [list(ele) for ele in txt_gen]
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyspread/src/gui'...
Compiling './lib/python3.5/site-packages/pyspread/src/gui/_dialogs.py'...
***   File "./lib/python3.5/site-packages/pyspread/src/gui/_dialogs.py", line 438
    except TypeError, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyspread/src/gui/_grid.py'...
***   File "./lib/python3.5/site-packages/pyspread/src/gui/_grid.py", line 1562
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyspread/src/gui/_grid_renderer.py'...
***   File "./lib/python3.5/site-packages/pyspread/src/gui/_grid_renderer.py", line 344
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyspread/src/gui/_gui_interfaces.py'...
***   File "./lib/python3.5/site-packages/pyspread/src/gui/_gui_interfaces.py", line 228
    except csv.Error, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyspread/src/gui/_main_window.py'...
***   File "./lib/python3.5/site-packages/pyspread/src/gui/_main_window.py", line 574
    os.chmod(pyspreadrc_path, 0600)
                                 ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/pyspread/src/interfaces'...
Listing './lib/python3.5/site-packages/pyspread/src/interfaces/test'...
Listing './lib/python3.5/site-packages/pyspread/src/lib'...
Compiling './lib/python3.5/site-packages/pyspread/src/lib/__csv.py'...
***   File "./lib/python3.5/site-packages/pyspread/src/lib/__csv.py", line 343
    except TypeError, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyspread/src/lib/rsvg_win.py'...
***   File "./lib/python3.5/site-packages/pyspread/src/lib/rsvg_win.py", line 1
    print "Detected windows, creating rsvg."
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyspread/src/lib/test'...
Compiling './lib/python3.5/site-packages/pyspread/src/lib/test/test_xrect.py'...
***   File "./lib/python3.5/site-packages/pyspread/src/lib/test/test_xrect.py", line 145
    print b1, b2
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyspread/src/model'...
Compiling './lib/python3.5/site-packages/pyspread/src/model/model.py'...
***   File "./lib/python3.5/site-packages/pyspread/src/model/model.py", line 1277
    except ValueError, err:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyspread/src/model/test'...
Compiling './lib/python3.5/site-packages/pyspread/src/sysvars.py'...
***   File "./lib/python3.5/site-packages/pyspread/src/sysvars.py", line 86
    def pxmm_2_dpi((pixels, length_mm)):
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyspread-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
